--- a/index.html
+++ b/index.html
@@ -171,11 +171,11 @@
       <ul class="list-group list-group-flush  ">
         <li class="list-group-item d-flex  ">
 
-          <div class="span-right d-flex col-lg-5  size-list">
-            <div class="span-number">
+          <div class="span-right d-flex col-lg-7  size-list">
+            <div class="span-number col-lg-2">
               <span>01</span>
             </div>
-            <div class="span-he">
+            <div class="span-he  col-lg-4">
               <span>
                 Life <br />
                 Insurance
@@ -183,7 +183,7 @@
             </div>
 
           </div>
-          <div class="paragraph-list d-flex align-items-center  col-lg-7">
+          <div class="paragraph-list d-flex align-items-center  col-lg-5">
             <p>This is the space to describe the service and explain how customers or clients can benefit from it.
               It’s
               an opportunity to add a short description that includes relevant details, like pricing, duration,
@@ -192,11 +192,11 @@
           </div>
         </li>
         <li class="list-group-item d-flex ">
-          <div class="span-right d-flex col-lg-5 size-list">
-            <div class="span-number">
+          <div class="span-right d-flex col-lg-7 size-list">
+            <div class="span-number  col-lg-2">
               <span>02</span>
             </div>
-            <div class="span-he">
+            <div class="span-he  col-lg-4">
               <span>
                 Disability<br />
 
@@ -205,7 +205,7 @@
             </div>
 
           </div>
-          <div class="paragraph-list col-lg-7 d-flex align-items-center ">
+          <div class="paragraph-list col-lg-5 d-flex align-items-center ">
             <p>This is the space to describe the service and explain how customers or clients can benefit from it.
               It’s
               an opportunity to add a short description that includes relevant details, like pricing, duration,
@@ -214,11 +214,11 @@
           </div>
         </li>
         <li class="list-group-item d-flex ">
-          <div class="span-right d-flex col-lg-5  size-list">
-            <div class="span-number">
+          <div class="span-right d-flex col-lg-7  size-list">
+            <div class="span-number  col-lg-2">
               <span>03</span>
             </div>
-            <div class="span-he">
+            <div class="span-he  col-lg-4">
               <span>
                 Mental Health<br />
                 Coverage
@@ -228,7 +228,7 @@
             </div>
 
           </div>
-          <div class="paragraph-list col-lg-7 d-flex align-items-center">
+          <div class="paragraph-list col-lg-5 d-flex align-items-center">
             <p>This is the space to describe the service and explain how customers or clients can benefit from it.
               It’s
               an opportunity to add a short description that includes relevant details, like pricing, duration,
@@ -237,11 +237,11 @@
           </div>
         </li>
         <li class="list-group-item d-flex ">
-          <div class="span-right d-flex col-lg-5 size-list">
-            <div class="span-number">
+          <div class="span-right d-flex col-lg-7 size-list">
+            <div class="span-number  col-lg-2">
               <span>04</span>
             </div>
-            <div class="span-he">
+            <div class="span-he  col-lg-4">
               <span>
                 Medical<br />
                 Reimbursement
@@ -250,7 +250,7 @@
             </div>
 
           </div>
-          <div class="paragraph-list col-lg-7  d-flex align-items-center">
+          <div class="paragraph-list col-lg-5  d-flex align-items-center">
             <p>This is the space to describe the service and explain how customers or clients can benefit from it.
               It’s
               an opportunity to add a short description that includes relevant details, like pricing, duration,
@@ -259,11 +259,11 @@
           </div>
         </li>
         <li class="list-group-item d-flex">
-          <div class="span-right d-flex col-lg-5 size-list">
-            <div class="span-number">
+          <div class="span-right d-flex col-lg-7 size-list">
+            <div class="span-number  col-lg-2">
               <span>05</span>
             </div>
-            <div class="span-he">
+            <div class="span-he  col-lg-4">
               <span>
                 Accident<br />
                 Insurance
@@ -272,7 +272,7 @@
             </div>
 
           </div>
-          <div class="paragraph-list col-lg-7  d-flex align-items-center">
+          <div class="paragraph-list col-lg-5  d-flex align-items-center">
             <p>This is the space to describe the service and explain how customers or clients can benefit from it.
               It’s
               an opportunity to add a short description that includes relevant details, like pricing, duration,
