--- a/index.html
+++ b/index.html
@@ -669,23 +669,23 @@
       </div>
 
 
-      <div class="input-name-lastname d-flex col-lg-6 col-md-8 col-11 mx-auto ">
+      <div class="input-name-lastname d-flex col-lg-6 col-md-6 col-7 mx-auto ">
 
 
-        <div class="row col-lg-11 col-12 mx-auto">
-          <div class="col-lg-6 col-12">
+        <div class=" col-lg-12 col-12 mx-auto">
+          <div class="col-lg-7 col-12">
             <label for="validationServer01" class="form-label">First name</label>
             <input type="text" class="form-control " id="validationServer01" required>
 
           </div>
-          <div class="col-lg-6 col-12">
+          <div class="col-lg-7 col-12">
             <label for="validationServer02" class="form-label">Last name</label>
             <input type="text" class="form-control " id="validationServer02" required>
 
           </div>
         </div>
-        <div class="row col-lg-11 col-12 mx-auto">
-          <div class="col-lg-6 col-12 ">
+        <div class="col-lg-12 col-12 mx-auto">
+          <div class="col-lg-7 col-12 ">
             <label for="validationServer03" class="form-label">Email</label>
             <div>
               <input type="text" class="form-control" id="validationServerUsername"
@@ -693,14 +693,14 @@
 
             </div>
           </div>
-          <div class="col-lg-6 col-12 col-auto">
+          <div class="col-lg-7 col-12">
             <label for="validationServer04" class="form-label">Phone</label>
             <input type="phone" class="form-control" id="validationServerUsername"
               aria-describedby="inputGroupPrepend3 validationServerUsernameFeedback" required>
           </div>
         </div>
 
-        <div class=" col-lg-9 col-11 mx-auto">
+        <div class=" col-lg-7 col-12 ">
           <label for="validationServer05" class="form-label">Company</label>
 
           <input type="text" class="form-control " id="validationServerUsername"
@@ -708,12 +708,12 @@
 
         </div>
 
-        <div class="form-floating form-leave-comment col-lg-9 col-11 mx-auto">
+        <div class="form-floating form-leave-comment col-lg-7 col-12 ">
           <textarea class="form-control inp-comment" placeholder="Leave a comment here" id="floatingTextarea2"
             style="height: 100px"></textarea>
           <label for="floatingTextarea2">How can we help?</label>
         </div>
-        <div class="form-floating col-11 col-lg-9 d-flex mx-auto">
+        <div class="form-floating col-12 col-lg-7 ">
           <button class="btn-Get-a-quote col-12 mx-auto">Get a quote</button>
         </div>
 
